# ai-bootcamp

./: .gitignore  README.md  pyproject.toml
week-1/: 01-env-test.ipynb  env-test.ipynb  homework.ipynb
week-2/: 02-adding-more-functions.ipynb  06-introduction-to-pydantic-ai.ipynb  08-multi-agent-deep-research-with-pydantic-ai.ipynb  homework.ipynb
week-3/: 02-writing-your-first-agent-test.ipynb  06-langwatch-scenario-for-agent-testing.ipynb  07-synthetic-data-generation-for-evaluations.ipynb  08-evaluating-retrieval.ipynb  09-preparing-for-evaluation.ipynb  10-llm-judges-for-agent-evaluation.ipynb  11-productionizing-eval-code.ipynb  12-judge-evaluations-with-evidently.ipynb  13-selecting-the-best-chunking-approach-with-evals.ipynb
week-3/wikiagent/: main.py  tools.py  wikiagent.py
week-4/: 01-preparation-streamlit-ui-and-streaming-structured-output.ipynb  02-collecting-agent-logs-for-monitoring.ipynb  03-creating-log-ingestion-monitoring-system.ipynb  04-creating-grafana-dashboard.ipynb  05-LLM-observability-with-Pydantic-Logfire.ipynb  06-opensource-observability-logfire-jaeger.ipynb  07-LLM-observability-with-langwatch.ipynb  08-translating-pydanticai-agent-to-openai-agent.ipynb  09-guardrails-with-openai-agents-sdk.ipynb  10-input-guardrails-in-pydantic-ai-via-tool-calls.ipynb  11-imput-guardrails-in-pydantic-ai-with-asyncio.ipynb
week-4/guardrails-agents-sdk/: agents-sdk.ipynb  search_tools.py
week-4/guardrails-pydantic-ai/: search_agent.py  ver3.py  ver3_asyncio_guardrail.py  with-asyncio.ipynb
week-4/project/: message.json  streaming_parsing.py  (+7 more)
(+40 files in other folders)
